# mumu-remote

./: .gitignore
.github/workflows/: cloud-package.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/mumuremote/: MainActivity.kt  VideoActivity.kt
android/app/src/main/res/layout/: activity_main.xml  activity_video.xml
docs/: quickstart.md
docs/plans/: 2026-02-25-mumu-lan-remote-design.md  2026-02-25-mumu-lan-remote-plan.md
pc/mumu-remote/: Cargo.toml
pc/mumu-remote/src/: adb.rs  capture.rs  encoder.rs  input.rs  main.rs  mumu.rs  net.rs  pairing.rs  pairing_service.rs  runtime_config.rs  stream.rs  ui.rs
